# fast_obj

./: .gitmodules  CMakeLists.txt  fast_obj.h  fast_obj_write.h
test/: read_obj.cpp
