CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(fast_obj)

SET(CMAKE_CXX_STANDARD 11)

ADD_LIBRARY(fast_obj INTERFACE IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(fast_obj PROPERTIES
    INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})
message("FastObj at: " ${CMAKE_CURRENT_SOURCE_DIR})

ADD_EXECUTABLE(test test/test.cpp)
TARGET_INCLUDE_DIRECTORIES(test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
